# FNaF_Advance

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  ideas.md  img_adj.txt  img_size.txt  notes.md
assets/images/cams/: stage_bcf.c  stage_bcf.h  stage_bcf_s.c  stage_bcf_s.h  stage_empty.c  stage_empty.h
assets/images/effects/: cam_blip_maps.c  cam_blip_maps.h  cam_blip_test.c  cam_blip_test.h  cam_blip_test2.c  cam_blip_test2.h
assets/images/office/: office.c  office.h  office_pal.c  office_pal.h
helpers/: gba_exporter.py  image_processor.py  io_util.py
include/DWedit/: .SOURCE.md  debug.c  debug.h  debug.s
include/tonc/: .SOURCE.md  input.h  memdef.h  memmap.h  toolbox.c  toolbox.h  types.h
notes-todo/: adjusting images.md  ideas.md  notes.md
source/: bg_pal_handler.c  bg_pal_handler.h  camera.c  camera.h  controls.h  game.c  game_state.c  game_state.h  init.c  init.h  main.c  menu.c  screen_handler.c  screen_handler.h
source/components/: ai.c  ai.h  animatronics.c  animatronics.h  camera.c  camera.h  cinematics.c  cinematics.h  controls.c  controls.h  equipment.c  equipment.h  graphics.c  graphics.h  power.c  power.h  spooky_effects.c  spooky_effects.h
source/components/animatronics/: animatronic.c  animatronic.h  animatronics._controller.c  animatronics._controller.h  animatronics.c  animatronics.h  animatronics_controller.c  animatronics_controller.h  bonnie.c  bonnie.h  chica.c  chica.h  foxy.c  foxy.h  freddy.c  freddy.h  golden_freddy.c  golden_freddy.h
source/game/: cam_nav.c  cam_nav.h  game.c  game.h  game_clock.c  game_clock.h  game_loop.c  game_loop.h  menu.c  menu.h  room_names.h
source/game/control/: cam_nav.h  camera.c  camera.h  controls.h  equipment.c  equipment.h  game_clock.c  game_clock.h  power.c  power.h
source/game/graphics/: bg_pal_handler.c  bg_pal_handler.h  cam_img_map.c  (+3 more)
source/graphics/: bg_pal_handler.c  bg_pal_handler.h  cam_img_map.c  cam_img_map.h  frame_appendix.c  frame_appendix.h  frames.c  frames.h  static_handler.c
source/util/: random.c  random.h  util.h
(+119 files in other folders)
